Fixed icon spacing

--- a/src/assets/stylesheets/project/_icon.scss
+++ b/src/assets/stylesheets/project/_icon.scss
@@ -40,6 +40,7 @@
   position: relative;
   bottom: -4px;
   padding: 0;
+  margin-right: 4px;
 
   .double-bounce1, .double-bounce2 {
     width: 100%;
